tests/errors/conditional-error.ice
ICE-1.0.0
sample >= 1.0.0

@app {
    IF (${missing} == true) {
        enabled: true
    }
}
